CTFd/themes/admindojo/static/css/base.css
html, body, .container {
    /*font-family: 'Lato', 'LatoOffline', sans-serif;*/
    font-family: 'BlinkMacSystemFont','Segoe UI','Helvetica','Arial','sans-serif'; 
}

h1, h2 {
    /*font-family: 'Raleway', 'RalewayOffline', sans-serif;*/
    font-weight: 500;
    letter-spacing: 2px;
}

a {
    color: #337ab7;
    text-decoration: none;
}

table > thead > tr > td {
    /* Remove border line from thead of all tables */
    /* It can overlap with other element styles */
    border-top: none !important;
}

#score-graph {
    height: 450px;
    display: block;
    clear: both;
}

.fa-spin.spinner {
    margin-top: 225px;
    text-align: center;
    opacity: 0.5;
}

.spinner-error {
    padding-top: 20vh;
    text-align: center;
    opacity: 0.5;
}

.jumbotron {
    background-color: #61615e;
    color: #FFF;
    border-radius: 0;
    text-align: center;
}

.form-control {
    position: relative;
    display: block;
    padding: 0.8em;
    border-radius: 0;
    background: #f0f0f0;
    color: #aaa;
    font-weight: 400;
    font-family: "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
    -webkit-appearance: none;
}

.form-control:focus {
    background-color: transparent;
    border-color: #a3d39c;
    box-shadow: 0 0 0 0.2rem #a3d39c;
    transition: background-color 0.3s, border-color 0.3s;
}

.input-filled-valid {
    background-color: transparent;
    border-color: #a3d39c;
    box-shadow: 0 0 0 0.2rem #a3d39c;
    transition: background-color 0.3s, border-color 0.3s;
}

.input-filled-invalid {
    background-color: transparent;
    border-color: #d46767;
    box-shadow: 0 0 0 0.2rem #d46767;
    transition: background-color 0.3s, border-color 0.3s;
}

.btn-outlined.btn-theme {
    background: none;
    color: #545454;
    border-color: #545454;
    border: 3px solid;
}

.btn-outlined {
    border-radius: 0;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
}

.btn {
    letter-spacing: 1px;
    text-decoration: none;
    -moz-user-select: none;
    border-radius: 0;
    cursor: pointer;
    display: inline-block;
    margin-bottom: 0;
    vertical-align: middle;
    white-space: nowrap;
    font-size: 14px;
    line-height: 20px;
    /*font-weight: 700;*/
    /*padding: 8px 20px;*/
}

.btn-info {
    background-color: #5B7290 !important;
    border-color: #5B7290 !important;
}

.badge-info {
    background-color: #5B7290 !important;
}

.alert {
    border-radius: 0 !important;
    padding: 0.8em;
}

.btn-fa {
    cursor: pointer;
}

.close {
    cursor: pointer;
}

.cursor-pointer {
    cursor: pointer;
}

.cursor-help {
    cursor: help;
}

select.form-control {
    height: auto !important;
}

.card {
    border-radius: 0 !important;
}

.modal-content {
    -webkit-border-radius: 0 !important;
    -moz-border-radius: 0 !important;
    border-radius: 0 !important;
}

.fa-disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

.navbar{
    font-family: Fira Mono,monospace;
    background-color: #61615e;
}
.mainContainer {
    flex: 1 1 auto;
    padding: 20px 0;
}
.containerTraining {
    flex: 1 1 auto;
    padding: 20px 0;
    font-size: 1.1rem;
}
.modal-lg {
	  max-width: 1200px;
}
.indexlogo{
    padding: 5em 11em 1em;
    display: flex;
    justify-content: flex-end;
    max-height: 300px;
    right: 0;
    top: 0;
    position: absolute;
}

